--- a/home_page.html
+++ b/home_page.html
@@ -4,15 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouShop</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap" rel="stylesheet">
+    <link href="https://fontawesome.com/search" >
 </head>
 <body>
     <header>
-        <div>
-            <a href="#" class="logo">YouShop</a>
-            <a href="#" >Shop</a>
-            <a href="#" >Blog</a>
-            <a href="#" >Our Story</a>
-        </div>
+        <article>
+            <nav>
+            <ul classe ="menu">
+                    <li> <a href="#" class="logo"><span class="first">You</span><span class="second">Shop</span></a></li>
+                    <li><a href="#" >Shop</a></li>
+                    <li> <a href="#" >Blog</a></li>
+                    <li><a href="#" >Our Story</a></li>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                   
+            </ul>
+            </nav> 
+        </article>
+        <figure>
+            <img class="pic_header" src="Headerr.png">
+            
+        </figure>
     </header>
+    <article class="product">
+        <h2>Shop The Latest</h2>
+        <figure>
+            <img src="1.png">
+            <h4>Lira Earring</h4>
+            <p>$20.00</p>
+        </figure>
+        <figure>
+            <img src="2.png">
+            <h4>Hal Earring</h4>
+            <p>$25.00</p>
+        </figure>
+        <figure>
+            <img src="3.png">
+            <h4>Kaede Hair Pin Set Of 3</h4>
+            <p>$30.00</p>
+        </figure>
+        <figure>
+            <img src="6.png">
+            <h4>Hair Pin Set Of 3</h4>
+            <p>$30.00</p>
+        </figure>
+        <figure>
+            <img src="4.png">
+            <h4>Lira Earring</h4>
+            <p>$20.00</p>
+        </figure>
+        <figure>
+            <img src="5.png">
+            <h4>Lira Earring</h4>
+            <p>$20.00</p>
+        </figure>
+    </article> 
+    <article>
+        <h2>About</h2>
+        <p>Who we are and why we do what we do!</p>
+        <p>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page,<br> le texte définitif venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée.</p>
+        <br><br>
+        <h3>Top Trend</h3>
+        <figure>
+            <img src="7.png">
+            <p>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page,<br> le texte définitif venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée.</p>
+            <ul>
+                <li>Le lorem ipsum est</li>
+                <li>Le lorem ipsum est</li>
+            </ul>
+        </figure>
+    </article>
+    <article>
+        <h2>Produced with care</h2>
+        <figure>
+            <img src="8.png">
+        </figure>
+        <p>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page,<br> le texte définitif venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée.</p>
+    </article>
+    <br>
+    <footer>
+        <hr>
+        <br>
+        <ul class="contact">
+            <li>CONTACT</li>
+            <li>TERMS OF SERVICES</li>
+            <li>SHIPPING AND RETURNS</li>
+        </ul>
+    </footer>
 </body>
 </html>
