--- a/home_page.html
+++ b/home_page.html
@@ -27,8 +27,9 @@
             
         </figure>
     </header>
+     <h2>Shop The Latest</h2>
     <article class="product">
-        <h2>Shop The Latest</h2>
+        
         <figure>
             <img src="1.png">
             <h4>Lira Earring</h4>
@@ -60,7 +61,7 @@
             <p>$20.00</p>
         </figure>
     </article> 
-    <article>
+    <article class="about">
         <h2>About</h2>
         <p>Who we are and why we do what we do!</p>
         <p>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page,<br> le texte définitif venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée.</p>
@@ -75,7 +76,7 @@
             </ul>
         </figure>
     </article>
-    <article>
+    <article class="about">
         <h2>Produced with care</h2>
         <figure>
             <img src="8.png">
