not finished yet

--- a/home_page.html
+++ b/home_page.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=DM+Sans:opsz,wght@9..40,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=DM+Sans:opsz,wght@9..40,100&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,10 +23,10 @@
                         <li><a href="#">Shop</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Our Story</a></li>
-                        <li>|</li>
-                        <li><i class="fas fa-search" style="color: #050505;"></i></li>
-                        <li><i class="fas fa-shopping-cart" style="color: #000000;"></i></li>
-                        <li><i class="fas fa-user" style="color: #000000;"></i></li>
+                        
+                        <li><a href=""><i class="fas fa-search" style="color: #050505;"></i></a></li>
+                        <li><a  href=""><i class="fas fa-shopping-cart" style="color: #000000;"></i></a></li>
+                        <li><a  href=""><i class="fas fa-user" style="color: #000000;"></i></a></li>
                     </ul>
                 </nav> 
             </div>
@@ -32,7 +34,7 @@
     <div class="pic_header">
         <h1 class="header_h1">Gold big hoops</h1>
         <h2 class="header_h2">$68.00</h2>
-        <h3 class="header_h3">View Product</h3>
+        <h3 class="header_h3"><button>View Product</button></h3>
     </div>
     <br>
     <div class="header_h4">
@@ -93,7 +95,7 @@
                 <a href="#">TERMS OF SERVICES</a>
                 <a href="#">SHIPPING AND RETURNS</a>
             </div>
-            <div class="form">
+            <div class="Custom-form">
                 <input type="input" class="form" placeholder="Give an email, get the newsletter."/>
               </div>
         </div>
