--- a/description.html
+++ b/description.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=DM+Sans:opsz,wght@9..40,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />    
 </head>
 <body>
     <header>
@@ -38,7 +41,7 @@
                 <p class="price">$20.00</p>
             </figure>
             <aside>
-                <h1 id="custom-h1">ADD TO BAG</h1>
+                <h1><a href="#" class="button">ADD TO BAG</a></h1>
                 <h2 id="custom-des">Description</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eaque neque quo magnam dolor veritatis, repudiandae hic fugit doloremque repellendus, molestias officia atque iure placeat sequi, facilis molestiae dolorem eum!</p>
             </aside>
@@ -63,10 +66,72 @@
                 <p class="price">$25.00</p>
             </figure>
         </div>
-        <div>
-            <h4>Our Happy clients</h4>
-        </div>
     </section>
+    <div class="container">
+        <h4> Our Happy Clients </h4>
+        <div class="reviewSection">
+    
+            <div class="reviewItem">
+                <div class="top">
+                    <div class="clientImage">
+                        <img src="client.avif" alt="">
+                        <span>Maryem</span>
+                    </div>
+                    <ul>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                    </ul>
+                </div>
+                <article>
+                    <p class="review">Good product</p>
+                    <p>Oct 11, 2023</p>
+                </article>
+            </div>
+    
+            <div class="reviewItem">
+                <div class="top">
+                    <div class="clientImage">
+                        <img src="client.avif" alt="">
+                        <span>Banta</span>
+                    </div>
+                    <ul>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                    </ul>
+                </div>
+                <article>
+                    <p class="review">mais non.</p>
+                    <p>Oct 11, 2023</p>
+                </article>
+            </div>
+
+            <div class="reviewItem">
+                <div class="top">
+                    <div class="clientImage">
+                        <img src="client.avif" alt="">
+                        <span>Niama</span>
+                    </div>
+                    <ul>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-solid fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                        <li><i class="fa-regular fa-star"></i></li>
+                    </ul>
+                </div>
+                <article>
+                    <p class="review">mais oui.</p>
+                    <p>Oct 11, 2023</p>
+                </article>
+            </div>
+        </div>
+    </div>
 </main>
 <footer>
     <hr>
@@ -77,7 +142,7 @@
             <a href="#">TERMS OF SERVICES</a>
             <a href="#">SHIPPING AND RETURNS</a>
         </div>
-        <div class="form">
+        <div class="Custom-form">
             <input type="input" class="form" placeholder="Give an email, get the newsletter."/>
           </div>
     </div>
