--- a/home_page.html
+++ b/home_page.html
@@ -43,7 +43,7 @@
     
     <article class="product">
         <figure>
-            <img src="1.png" alt="Product 1">
+          <a href="http://127.0.0.1:5500/description.html"><img src="1.png" alt="Product 1"></a>  
             <figcaption>Lira Earring</figcaption>
             <p class="price">$20.00</p>
         </figure>
