add some modification in css

--- a/home_page.html
+++ b/home_page.html
@@ -74,12 +74,16 @@
         </figure>
     </article> 
     <article class="about">
-        <h5>Top trend</h5>
+        <h5 class="Header_h5">Top trend</h5>
         <figure>
             <img src="7.png" alt="Product 7">
         </figure>
         <p>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page,<br> le texte définitif venant remplacer the faux-texte dès qu'il est prêt ou que la mise en page est achevée.</p>
-        <h6>Produced with care</h6>
+        <ul>
+            <li>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée</li>
+            <li>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée</li>
+        </ul>
+        <h6 class="Header_h5">Produced with care</h6>
         <figure>
             <img src="8.png" alt="Produced with care Image">
         </figure>
