--- a/panier.html
+++ b/panier.html
@@ -48,10 +48,59 @@
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-regular fa-star"></i></li>
+                <li><p>4/5</p></li>
             </ul>
         </div>
-    
+        <p>29.00$</p>
+        <p>Lorem Ipsum is simply dummy text oftheprin and typesetting indust Lorem Ipsum is simply dummy text otheprin and typesetting indust</p>
+        <ul>
+            <button id="btn-quantity">-</button>
+            <button id="btn-quantity">1</button>
+            <button id="btn-quantity">+</button>
+        </ul>
+       
     </aside>
+</section>
+<section>
+    <h2>Shipping details</h2>
+    <form class="form-panier">
+        <div>
+          <label id="label" for="name" >Full Name* </label>
+          <input type="text" name="name" id="name" placeholder="Maryem KHAOUA" />
+        </div>
+        <div>
+          <label id="label" for="number">Phone Number* </label>
+          <input type="text" name="number Phone" id="number"  placeholder="+212600000000"/>
+        </div>
+        <div>
+            <label id="label" for="email">E-mail* </label>
+            <input type="email" name="email" id="email"  placeholder="example@examlpe.com"/>
+          </div>
+          <div>
+            <label id="label" for="adress">Delivery Address*</label>
+            <input type="text" name="adress" id="adress"  placeholder="Street Adress"/>
+            <input type="text" name="adress" id="adress"  placeholder="Street Adress Line 2"/>
+            <input type="text" name="adress" id="adress"  placeholder="Postal/ ZIP Code"/>
+          </div>
+      </form>
+      <h3>Payments Information </h3>
+      <form class="form-panier">
+        <div>
+          <label id="label">Credit Card NO* </label>
+          <input type="text" name="No card" id="card" placeholder="XXX-XXX-XXXXXXXXXX" />
+        </div>
+        <div>
+          <label id="label">EXP* </label>
+          <input type="text" name="card" id="card"  placeholder=""/>
+        </div>
+        <div>
+            <label id="label">CCV* </label>
+            <input type="text" name="card" id="card"  placeholder="example@examlpe.com"/>
+          </div>
+          <div>
+            <input type="submit" value="PURCHASE" />
+          </div>
+      </form>
 </section>
 </body>
 </html>
