modify the name of page

--- a/description.html
+++ b/description.html
@@ -41,7 +41,7 @@
                 <p class="price">$20.00</p>
             </figure>
             <aside>
-                <h1><a href="#" class="button">ADD TO BAG</a></h1>
+                <h1><a href="http://127.0.0.1:5500/panier.html?No+card=&card=&card=" class="button">ADD TO BAG</a></h1>
                 <h2 id="custom-des">Description</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eaque neque quo magnam dolor veritatis, repudiandae hic fugit doloremque repellendus, molestias officia atque iure placeat sequi, facilis molestiae dolorem eum!</p>
             </aside>
