--- a/panier.html
+++ b/panier.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Our Story</a></li>
-                    
+                    <li>|</li>
                     <li><a href=""><i class="fas fa-search" style="color: #050505;"></i></a></li>
                     <li><a  href=""><i class="fas fa-shopping-cart" style="color: #000000;"></i></a></li>
                     <li><a  href=""><i class="fas fa-user" style="color: #000000;"></i></a></li>
@@ -66,7 +66,7 @@
     <form class="form-panier">
         <div>
           <label id="label" for="name" >Full Name* </label>
-          <input type="text" name="name" id="name" placeholder="Maryem KHAOUA" />
+          <input type="text" name="name" id="name" placeholder="Enter your name" />
         </div>
         <div>
           <label id="label" for="number">Phone Number* </label>
@@ -95,7 +95,7 @@
         </div>
         <div>
             <label id="label">CCV* </label>
-            <input type="text" name="card" id="card"  placeholder="example@examlpe.com"/>
+            <input type="text" name="card" id="card"  placeholder=""/>
           </div>
           <div>
             <input type="submit" value="PURCHASE" />
