add some modification

--- a/panier.html
+++ b/panier.html
@@ -62,7 +62,7 @@
     </aside>
 </section>
 <section>
-    <h2>Shipping details</h2>
+    <h2 class="shipping">Shipping details</h2>
     <form class="form-panier">
         <div>
           <label id="label" for="name" >Full Name* </label>
@@ -83,7 +83,7 @@
             <input type="text" name="adress" id="adress"  placeholder="Postal/ ZIP Code"/>
           </div>
       </form>
-      <h3>Payments Information </h3>
+      <h3 class="shipping">Payments Information </h3>
       <form class="form-panier">
         <div>
           <label id="label">Credit Card NO* </label>
